Menambahkan halaman balance, menambahkan fungsi pada dao dan controller yang dibutuhkan untuk mendukung halaman balance

--- a/src/main/resources/com/tugasbesar/tugasbesar/dashboard-view.fxml
+++ b/src/main/resources/com/tugasbesar/tugasbesar/dashboard-view.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <AnchorPane prefHeight="450.0" prefWidth="640.0" style="-fx-background-color: #EAFDFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tugasbesar.tugasbesar.controller.DashboardController">
    <children>
       <VBox prefHeight="435.0" prefWidth="640.0" AnchorPane.topAnchor="0.0">
