--- a/src/main/resources/com/tugasbesar/tugasbesar/dashboard-view.fxml
+++ b/src/main/resources/com/tugasbesar/tugasbesar/dashboard-view.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,17 +11,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="640.0" style="-fx-background-color: #EAFDFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tugasbesar.tugasbesar.controller.DashboardController">
+<AnchorPane prefHeight="450.0" prefWidth="650.0" style="-fx-background-color: #EAFDFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tugasbesar.tugasbesar.controller.DashboardController">
    <children>
-      <VBox prefHeight="435.0" prefWidth="640.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="450.0" prefWidth="650.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="150.0" prefWidth="200.0">
+            <AnchorPane prefHeight="150.0" prefWidth="627.0">
                <children>
                   <HBox prefHeight="150.0" prefWidth="600.0">
                      <children>
                         <AnchorPane prefHeight="150.0" prefWidth="300.0">
                            <children>
-                              <VBox layoutY="35.0" prefHeight="79.0" prefWidth="300.0">
+                              <VBox layoutX="10.0" layoutY="35.0" prefHeight="79.0" prefWidth="290.0">
                                  <children>
                                     <Label text="Welcome Back" textFill="#00a4c6">
                                        <font>
@@ -36,9 +36,9 @@
                                           <Insets left="10.0" top="5.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Button fx:id="signOut" mnemonicParsing="false" onAction="#signOut" text="Sign Out" />
                                  </children>
                               </VBox>
+                              <JFXButton fx:id="signOut" layoutX="248.0" layoutY="110.0" onAction="#signOut" style="-fx-border-color: blue;" text="Sign Out" />
                            </children>
                         </AnchorPane>
                         <Separator orientation="VERTICAL" prefHeight="180.0">
@@ -83,14 +83,14 @@
                   </HBox>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="200.0">
+            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="151.0" prefWidth="621.0">
                <children>
-                  <Label layoutY="6.0" text="Monthly Summary" textFill="#00a4c6">
+                  <Label layoutX="6.0" layoutY="6.0" prefHeight="18.0" prefWidth="130.0" text="Monthly Summary" textFill="#00a4c6">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
                      </font>
                   </Label>
-                  <HBox layoutY="31.0" prefHeight="120.0" prefWidth="600.0">
+                  <HBox layoutX="6.0" layoutY="31.0" prefHeight="120.0" prefWidth="644.0">
                      <children>
                         <AnchorPane prefHeight="200.0" prefWidth="220.0">
                            <children>
@@ -170,26 +170,21 @@
                               <Insets left="10.0" />
                            </HBox.margin>
                         </AnchorPane>
-                        <Separator layoutX="230.0" layoutY="10.0" orientation="VERTICAL" prefHeight="200.0">
-                           <padding>
-                              <Insets bottom="10.0" top="10.0" />
-                           </padding>
-                        </Separator>
                         <AnchorPane prefHeight="120.0" prefWidth="130.0" />
                      </children></HBox>
-                  <Label alignment="CENTER" layoutX="410.0" layoutY="7.0" text="Tanggal :" textFill="#37dbff">
+                  <Label alignment="CENTER" layoutX="498.0" layoutY="7.0" text="Tanggal :" textFill="#37dbff">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="tanggal" alignment="CENTER" layoutX="469.0" layoutY="7.0" text="tanggal disini" textFill="#37dbff">
+                  <Label fx:id="tanggal" alignment="CENTER" layoutX="557.0" layoutY="7.0" text="tanggal disini" textFill="#37dbff">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
-            <Pane prefHeight="143.0" prefWidth="640.0" style="-fx-background-color: #37DBFF;">
+            <Pane prefHeight="144.0" prefWidth="640.0" style="-fx-background-color: #37DBFF;">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -197,4 +192,7 @@
          </children>
       </VBox>
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
